objects/MMQuestion__c.object
<CustomObject>
    <fields>
        <fullName>Events__c</fullName>
        <label>Events</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>MMQuestions</relationshipLabel>
        <relationshipName>MMQuestions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsConditional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsConditional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PickList</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CheckBoxs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Buttons</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Whom__c</fullName>
        <label>Whom</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mbe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MMQuestion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Events__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MMQuestion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMQuestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>